k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "swoole-app"
  labels:
    app: swoole-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app

  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: php-swoole
          image: williamcaesar/swoole-test
          ports:
            - containerPort: 80
