k8s/Services.yml
apiVersion: v1
kind: Service      
metadata:
  name: app-service
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: app
